# egld-for-ukraine

./: .gitignore
sc-donation/: Cargo.toml  package-lock.json  package.json
sc-donation/interactions/: mainnet_activateDonation.sh  mainnet_activateMinting.sh  mainnet_createTierNft.sh  mainnet_deactivateDonation.sh  mainnet_deployContract.sh  mainnet_initMinting.sh  mainnet_issueSft.sh  mainnet_sendEgldsToOwner.sh  mainnet_sendTierNft.sh  mainnet_setRoleAddQty.sh  mainnet_setRoleCreateNft.sh  mainnet_upgradeContract.sh  settings.sh  settings_mainnet.sh  settings_testnet.sh  testnet_activateDonation.sh  testnet_activateMinting.sh  testnet_createTierNft.sh  testnet_deployContract.sh  testnet_initMinting.sh  testnet_issueSft.sh  testnet_sendTierNft.sh  testnet_setRoleAddQty.sh  testnet_setRoleCreateNft.sh  testnet_upgradeContract.sh
sc-donation/mandos/: freeze_state.scen.json  inactive_states.scen.json  invalid_donations.scen.json  invalid_texts.scen.json  mint_tier_nfts.scen.json  modify_pseudo_twitter_message.scen.json  multiple_donations.scen.json  one_donation.scen.json  one_donation_several_tiers.scen.json  one_donation_tier_1.scen.json  send_eglds.scen.json  setup.json  several_donations.scen.json  update_tier_thresholds.scen.json
sc-donation/mandos/setup/: 1_init_accounts.json  2_set_sc_state.json  3_check_state.json  setup.json
sc-donation/meta/: Cargo.toml
sc-donation/meta/src/: main.rs
sc-donation/scenarios/: multiple_donations.scen.json  send_eglds.scen.json  update_tier_thresholds.scen.json
sc-donation/src/: lib.rs
sc-donation/wasm/: Cargo.toml
(+39 files in other folders)
