[package]
name = "donation"
version = "0.0.0"
edition = "2018"
publish = false

[dev-dependencies]
num-bigint = "0.4.2"

[dependencies.elrond-wasm]
version = "0.28.0"
features = ["cb_closure_managed_deser"]

[dev-dependencies.elrond-wasm-debug]
version = "0.28.0"

[dependencies.itertools]
version = "0.10.1"
default-features = false
